zapata-dx/force-app/main/default/objects/WorkOrder/fields/Ad_ID__c.field-meta.xml
<CustomField>
    <fullName>Ad_ID__c</fullName>
    <description>Identificador del anuncio. Permite afirmar con registros, no con estimaciones, que un anuncio genero N citas.</description>
    <label>Ad ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>