zapata-dx/force-app/main/default/objects/WorkOrder/fields/Asesor_Responsable__c.field-meta.xml
<CustomField>
    <fullName>Asesor_Responsable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asesor que recibe la unidad. Sin esto la cita no tiene dueno.</description>
    <label>Asesor responsable</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Ordenes asignadas</relationshipLabel>
    <relationshipName>Ordenes_Asignadas</relationshipName>
    <type>Lookup</type>
</CustomField>