zapata-dx/force-app/main/default/objects/WorkOrder/fields/Confirmacion_Enviada__c.field-meta.xml
<CustomField>
    <fullName>Confirmacion_Enviada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Zapata confirma la cita por correo. Marca si ya se envio.</description>
    <label>Confirmacion enviada</label>
    <type>Checkbox</type>
</CustomField>