zapata-dx/force-app/main/default/objects/WorkOrder/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>Une la orden con la conversacion y el log.</description>
    <label>Correlation Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>