zapata-dx/force-app/main/default/objects/WorkOrder/fields/Idempotency_Key__c.field-meta.xml
<CustomField>
    <fullName>Idempotency_Key__c</fullName>
    <description>Evita crear dos ordenes por un reintento del agente.</description>
    <externalId>true</externalId>
    <label>Idempotency Key</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>