zapata-dx/force-app/main/default/objects/WorkOrder/fields/Origen_Atencion__c.field-meta.xml
<CustomField>
    <fullName>Origen_Atencion__c</fullName>
    <description>Canal que origino la orden.</description>
    <label>Origen de atencion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agentforce</fullName>
                <default>true</default>
                <label>Agentforce</label>
            </value>
            <value>
                <fullName>Telefono</fullName>
            </value>
            <value>
                <fullName>Mostrador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>