zapata-dx/force-app/main/default/objects/WorkOrder/fields/Placa__c.field-meta.xml
<CustomField>
    <fullName>Placa__c</fullName>
    <description>Placa capturada en la cita. Se copia del Asset pero se conserva aparte porque la unidad puede cambiar de placa.</description>
    <label>Placa</label>
    <length>15</length>
    <type>Text</type>
</CustomField>