zapata-dx/force-app/main/default/objects/WorkOrder/fields/Procedencia__c.field-meta.xml
<CustomField>
    <fullName>Procedencia__c</fullName>
    <description>Clasificacion del registro transaccional. No acredita que corresponda a un cliente confirmado.</description>
    <inlineHelpText>Los registros previos del reto se etiquetan PRUEBA_TRANSACCIONAL_SIN_FUENTE_CONFIRMADA.</inlineHelpText>
    <label>Procedencia del registro</label>
    <length>80</length>
    <type>Text</type>
</CustomField>