zapata-dx/force-app/main/default/objects/WorkOrder/fields/Sesion_Diagnostico__c.field-meta.xml
<CustomField>
    <fullName>Sesion_Diagnostico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Diagnostico que origino la cita. Permite que la orden llegue al taller con el sintoma ya capturado, que es el valor que el briefing promete a Zapata.</description>
    <label>Sesion de diagnostico</label>
    <referenceTo>Sesion_Diagnostico__c</referenceTo>
    <relationshipLabel>Ordenes generadas</relationshipLabel>
    <relationshipName>Ordenes_Generadas</relationshipName>
    <type>Lookup</type>
</CustomField>