zapata-dx/force-app/main/default/objects/WorkOrder/fields/Sintoma_Reportado__c.field-meta.xml
<CustomField>
    <fullName>Sintoma_Reportado__c</fullName>
    <description>Texto literal del usuario. Nunca un diagnostico inventado por el agente.</description>
    <label>Sintoma reportado</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>