zapata-dx/force-app/main/default/objects/WorkOrder/fields/Slot_Taller__c.field-meta.xml
<CustomField>
    <fullName>Slot_Taller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Franja reservada.</description>
    <label>Slot de taller</label>
    <referenceTo>Slot_Taller__c</referenceTo>
    <relationshipLabel>Ordenes de servicio</relationshipLabel>
    <relationshipName>Ordenes_Servicio</relationshipName>
    <type>Lookup</type>
</CustomField>