zapata-dx/force-app/main/default/objects/WorkOrder/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Taller seleccionado para la cita.</description>
    <label>Sucursal</label>
    <referenceTo>Sucursal__c</referenceTo>
    <relationshipLabel>Ordenes de servicio</relationshipLabel>
    <relationshipName>Ordenes_Servicio</relationshipName>
    <type>Lookup</type>
</CustomField>