zapata-dx/force-app/main/default/objects/WorkOrder/fields/Tipo_Cita__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Cita__c</fullName>
    <description>Que se va a hacer en la cita. Debe coincidir con el tipo del slot.</description>
    <label>Tipo de cita</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diagnostico</fullName>
                <default>true</default>
                <label>Diagnostico</label>
            </value>
            <value>
                <fullName>Mantenimiento</fullName>
            </value>
            <value>
                <fullName>Garantia</fullName>
            </value>
            <value>
                <fullName>Reparacion mayor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>