zapata-dx/force-app/main/default/objects/WorkOrder/fields/Utm_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Utm_Campaign__c</fullName>
    <description>Campana que origino el contacto.</description>
    <label>UTM campaign</label>
    <length>150</length>
    <type>Text</type>
</CustomField>