zapata-dx/force-app/main/default/objects/WorkOrder/fields/Utm_Medium__c.field-meta.xml
<CustomField>
    <fullName>Utm_Medium__c</fullName>
    <description>Medio de la campana que origino el contacto.</description>
    <label>UTM medium</label>
    <length>100</length>
    <type>Text</type>
</CustomField>