zapata-dx/force-app/main/default/objects/WorkOrder/fields/Utm_Source__c.field-meta.xml
<CustomField>
    <fullName>Utm_Source__c</fullName>
    <description>Origen publicitario. El formulario web de Zapata ya lo captura oculto.</description>
    <label>UTM source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>